# starbound

./: .env.example  .gitignore  README.md  docker-compose.yml
cv-service/: .env.example  requirements.txt
cv-service/app/: main.py
cv-service/app/cv/: processor.py  security.py
cv-service/app/models/: schemas.py
cv-service/app/routes/: refund.py
docker/: cv.Dockerfile  frontend.Dockerfile  gateway.Dockerfile  nginx.conf  rag.Dockerfile
docs/: cv-service.md  docker.md  electron.md  frontend.md  gateway.md  testing.md
docs/info/: cv-service.md  docker.md  frontend.md  rag-service.md
electron/: main.js  package-lock.json  package.json  preload.js
frontend/: Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: main.rs  route.rs  types.rs
frontend/src/components/: mod.rs  navbar.rs
frontend/src/components/layout/: chatbot_widget.rs  mod.rs  navbar.rs  protected_route.rs  search_overlay.rs
frontend/src/components/product/: mod.rs  product_card.rs
frontend/src/components/ui/: chat_message.rs  mod.rs  spinner.rs  tooltip.rs
frontend/src/context/: auth.rs  cart.rs  chat.rs  mod.rs
frontend/src/hooks/: mod.rs
frontend/src/pages/: account.rs  cart.rs  catalog.rs  chat.rs  checkout.rs  compare.rs  home.rs  landing.rs  login.rs  mod.rs  not_found.rs  order_confirmation.rs  order_detail.rs  orders.rs  product_detail.rs  profile.rs  refund.rs  register.rs
frontend/src/services/: api.rs  auth.rs  mod.rs  orders.rs  products.rs
frontend/styles/: input.css
gateway/: go.mod  go.sum
gateway/cmd/: main.go
gateway/docs/: docs.go  swagger.json  swagger.yaml
gateway/tests/: auth_test.go  handlers_test.go  orders_test.go
rag-service/: requirements.txt
rag-service/app/: main.py
tests/: package-lock.json  package.json  playwright.config.ts
tests/e2e/: auth.spec.ts  cart.spec.ts  catalog.spec.ts  compare.spec.ts  health.spec.ts  landing.spec.ts  orders.spec.ts  product.spec.ts  profile.spec.ts
tests/fixtures/: auth.ts
(+24 files in other folders)
