[package]
name = "starbound-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["std"] }
gloo-net = "0.5"
gloo-storage = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "CssStyleDeclaration",
    "AnimationEvent",
    "TransitionEvent",
    "IntersectionObserver",
    "IntersectionObserverEntry",
    "IntersectionObserverInit",
    "HtmlAnchorElement",
    "HtmlInputElement",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "FormData",
    "File",
    "FileList",
    "DataTransfer",
    "DragEvent",
]}
js-sys = "0.3"
rand = { version = "0.10.0", features = ["std_rng"] }
getrandom = { version = "0.4.2", features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true

[profile.dev]
opt-level = 0
